--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Mint Page",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "logo sg.png",
       "type": "image/png",
       "sizes": "358x358"
     }
